<resources>
    <string name="app_name">Game</string>
    <string name="paper_rock_scissors">Paper, Rock, Scissors!</string>
    <string name="you_lose">You lose :(</string>
    <string name="you_win">You win!</string>
    <string name="better_luck_next_time">Better luck next time!</string>
    <string name="computer">(Computer)</string>
    <string name="you">(You)</string>
    <string name="play_again">Play again</string>\
    <string name="draw">Draw!</string>
    <string name="img1">img1</string>
</resources>
